--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ panic = 'unwind'
 authors = ['Anonymous']
 build = 'build.rs'
 edition = '2018'
-name = 'node-template'
+name = 'Noahs-aRk'
 version = '2.0.0'
 
 [build-dependencies]
@@ -48,7 +48,8 @@ package = 'sp-finality-grandpa'
 rev = '3e651110aa06aa835790df63410a29676243fc54'
 version = '2.0.0'
 
-[dependencies.node-template-runtime]
+[dependencies.runtime]
+package = 'noahs-ark-runtime'
 path = 'runtime'
 version = '2.0.0'
 
@@ -127,8 +128,11 @@ rev = '3e651110aa06aa835790df63410a29676243fc54'
 version = '2.0.0'
 
 [workspace]
-members = ['runtime']
+members = [
+	'runtime',
+	'pallets/validator-set'
+]
 
 [[bin]]
-name = 'node-template'
+name = 'noahs-ark'
 path = 'src/main.rs'
