--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -174,6 +174,16 @@ git = 'https://github.com/paritytech/substrate.git'
 package = 'pallet-democracy'
 rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'
 
+[dependencies.air-drop]
+default-features = false
+path = '../pallets/air-drop'
+
+[dependencies.vesting]
+default-features = false
+git = 'https://github.com/paritytech/substrate.git'
+package = 'pallet-vesting'
+rev = '2e8080e2902fc477bbce36512a8f5bcdc4b49f17'
+
 [features]
 default = ['std']
 std = [
@@ -205,6 +215,8 @@ std = [
     'transaction-payment/std',
     'validator-set/std',
     'democracy/std',
+    'air-drop/std',
+    'vesting/std',
 ]
 
 [package]
