--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ parking_lot = '0.9.0'
 tokio = '0.1.22'
 trie-root = '0.15.2'
 structopt = '0.3.8'
+hex-literal = "0.2.1"
+air-drop = { path = "pallets/air-drop" }
 
 [dependencies.codec]
 package = 'parity-scale-codec'
